fixed login btn color, show fullname instead of username and fixed room message overlapping with personal message

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -168,7 +168,7 @@ form.sign-in-form {
 .btnl {
   width: 120px;
   height: 40px;
-  background-color: rgb(135, 150, 142);
+  background-color: seagreen;
   border: none;
   outline: none;
   border-radius: 49px;
